# paper-watch

./: .env.example  .gitignore  README.md  STRUCTURE.md  TOOLS.md  config.example.yaml  config.yaml  graphql.suggestion.md  handles.txt  method-rec.md  more-targets.md  profile.md  pyproject.toml  slack_channels.py  tags.yaml
deploy/: backfill_dedup.py  backfill_pubdates.py  backfill_relevance_scale.py  backfill_titles.py  backfill_v2.py  backfill_webtitles.py  measure_score_distribution.py  metadata_repair.py
deploy/nitter/: README.md  add-session.sh  add_cookie_session.py  browser-session.sh  create_session_browser.py  docker-compose.yml  gen-session.sh  get_session.py  nitter.conf  requirements-browser.txt  requirements-session.in  requirements-session.txt
deploy/systemd/: README.md  paper-watch.service  paper-watch.timer
src/paper_watch/: __init__.py  cli.py  config.py  dates.py  digest.py  enrich.py  eval.py  (+11 more)
tests/: conftest.py  test_arxiv.py  test_backfill_relevance.py  test_cli.py  test_config.py  test_dates.py  test_digest.py  test_email.py  test_enrich.py  test_eval.py  test_feedback.py  test_feedback_votes.py  test_graphql.py  test_groundtruth.py  test_handles.py  test_html_meta.py  test_http.py  test_identity.py  test_newsletter_links.py  test_nitter_local.py  test_nitter_session_tools.py  test_normalize.py  test_openreview.py  test_page_watch.py  test_paper_search.py  test_pdf_meta.py  test_rss.py  test_runtime.py  test_score.py  test_semantic_scholar.py  test_slack.py  test_store.py  test_tweet_resolver.py  test_twitter_nitter.py  test_web_search.py
(+31 files in other folders)
