[project]
name = "paper-watch"
version = "0.1.0"
description = "Scan AI-safety paper sources and email a ranked digest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
paper-watch = "paper_watch.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
